hphp/hack/test/typecheck/lambda/lambda_classname.php.like_types.exp
File "lambda_classname.php", line 10, characters 29-34:
Invalid argument (Typing[4110])
File "lambda_classname.php", line 6, characters 13-15:
Expected Tv1
File "lambda_classname.php", line 9, characters 12-23:
But got dynamic because a type could not be determined here
File "lambda_classname.php", line 21, characters 29-34:
Invalid argument (Typing[4110])
File "lambda_classname.php", line 16, characters 13-15:
Expected Tv1
File "lambda_classname.php", line 20, characters 12-23:
But got dynamic because a type could not be determined here
